# normal-map-explosion

./: Cargo.toml  README.md
res/: frag.wgsl  vertex.wgsl
src/: main.rs  state.rs
src/components/: mod.rs  point_light.rs  quad.rs  sprite.rs  transform.rs
src/render/: camera.rs  mod.rs  texture.rs  vertex.rs
